[build_sphinx]
source-dir = doc/
build-dir = doc/_build
all_files = 1

[metadata]
name = pyhpo
author = Jonas Marcello
author_email = jonas.marcello@centogene.com
description = A Python package to work with the HPO Ontology
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: pyhpo.__version__
url = https://github.com/Centogene/pyhpo
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Software Development :: Libraries :: Python Modules
license = MIT License
license_files =
    LICENSE

[options]
python_requires = >= 3.7
packages = find:
include_package_data = true
zip_safe = False
install_requires =
    pydantic
    backports.cached-property==1.0.1


[options.extras_require]
pandas =
    pandas
scipy =
    scipy
all =
    pandas
    scipy
dev =
    coverage
    flake8
    mypy
    sphinx
    sphinx_rtd_theme
